--- a/tex/main.tex
+++ b/tex/main.tex
@@ -12,8 +12,21 @@
 \def\Extended{}
 \newif\ifFIGS
 \FIGSfalse  
-\FIGStrue 
- 
+%\FIGStrue 
+
+%#### Result val
+% corr of gemietric mean to IRAT mergence
+% corr of irat pred to irat impact
+% corr of irat pred to irat emergence
+% number of qnets inferred in different cases
+% number of sequences used
+% length of time used to infer qnets
+% outperformance of dom starin prediction
+% how many high risk strains identified from 2020 to current
+% how long it takes to compute risk score
+%#----------------------
+
+
 % Zoonotic risk technology
 % FluLeap~\cite{eng2014predicting} is a machine-learning algorithm
 % that uses sequence data to identify host tropism: classify influenza
@@ -57,8 +70,10 @@ Influenza viruses constantly evolve~\cite{dos2016influenza},  rapidly producing 
 A possible approach to mitigating such risk is to identify  strains in animal hosts that do not yet circulate in humans but is likely to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate such risk posed to  humans by  individual animal  strains  is  limited~\cite{wille2021accurately}. Despite recent progress towards understanding emergence risk~\cite{pulliam2009ability,grewelle2020larger,grange2021ranking}, scalable ranking of individual strains remains out of reach.
 
 
-CDC's current solution to preempting strain-specific emergence  is the Influenza Risk Assessment Tool (IRAT), which  uses  ten weighted and pre-determined risk elements to factor in   1) expert-selected properties of the strain, 2) attributes of the population, and 3) ecology and epidemiological characteristics~\cite{Influenz24:online}. Influenza subject matter experts CDC and other key organizations such as the Food and Drug Administration (FDA), Animal and Plant Health Inspection Service (APHIS), and Agricultural Research Service (ARS) are asked to evaluate are asked to evaluate strain lineages using the ten risk elements defined in the IRAT, namely the number of human infections, transmission in laboratory animals, receptor binding characteristics, population immunity, infections in animals, genomic analysis, antigenic relatedness, global distribution in animals, disease severity and  pathogenesis, and antiviral treatment options. Each SME score 1 to 3 elements based on their
-particular areas of expertise, and the point estimate scores for each risk element are averaged, multiplied by predetermined weights, and summed to give an aggregate score for each of the two IRAT risk questions related to potential risk for emergence in humans and potential public health impact if the virus gains HH capability. Generally  the scores obtained are subjective to some degree, with some variability observed among SME point estimates. Additionally, evaluating the score  involves multiple experimental assays, possibly taking  weeks to compile the final  evaluation for a single strain or lineage. This results in  a scalability bottleneck: while  current global surveillance efforts annually  collect  thousands of sequences, most  will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output.%, and thus have low odds of successfully  preempting a \infl pandemic. 
+CDC's current solution to preempting strain-specific emergence  is the Influenza Risk Assessment Tool (IRAT)~\cite{Influenz24:online}, which  uses  ten weighted and pre-determined risk elements evaluated by a panel of 
+%
+% to factor in   1) expert-selected properties of the strain, 2) attributes of the population, and 3) ecology and epidemiological characteristics~\cite{Influenz24:online}.
+ subject matter experts from  key organizations such as the CDC, the Food and Drug Administration (FDA), the Animal and Plant Health Inspection Service (APHIS), and the Agricultural Research Service (ARS). Each SME scores 1 to 3 elements, from the total set comprising the number of recorded human infections, transmission in laboratory animals, receptor binding characteristics, population immunity, infections in animals, genomic analysis, antigenic relatedness, global distribution in animals, disease severity and  pathogenesis, and antiviral treatment options. The point estimate scores for each  element are averaged, scaled by predetermined weights, and summed to give an aggregate score for each of the two IRAT risk questions: 1) the potential risk for emergence in humans and 2) the potential public health impact if the virus gains HH capability. Generally  the scores obtained are subjective to some degree, with  variability observed across SME  estimates. Additionally, evaluating the score  involves multiple experimental assays, possibly taking  weeks to compile the final  evaluation for a single strain or lineage. This results in  a scalability bottleneck: with   global  efforts   collecting  thousands of sequences annually,  IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output.%, and thus have low odds of successfully  preempting a \infl pandemic. 
 
 
 
@@ -79,17 +94,14 @@ To uncover relevant evolutionary constraints, we analyzed observed variations (p
 The genomic dependencies we uncover are shaped by  a  functional necessity of conserving/augmenting  fitness in the wild. A  strain must be sufficiently common  to be recorded, implying that the sequences from public databases that we train  with have  high replicative fitness. Lacking kinetic proofreading  in  RNA-polymerase,  \infl integrates  faulty nucleotides   at a relatively high rate ($10^{-3}$ to $10^{-4}$) during  replication~\cite{ahlquist2002rna,chen2006avian}. However, few   of these variations are actually viable, with only specific patterns  maintaining/gaining fitness;  leading to emergent dependencies between such changes. Furthermore, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from the evolution of cytotoxic T lymphocyte  epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With a sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these  constraints, automatically reflecting the effect of  evolving host immunity, and the current background strain distribution.  
 
 
-Structurally, an \enet comprises an interdependent collection of  local predictors: each aiming to model the observed amino acid ``outcome'' at a specific positional index of the proteins using as features (input variables) the residues appearing  at other  locations  (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a particular index, implying that an \enet comprises atmost as many such  position-specific predictors as the length of the AA sequence. These individual predictors are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive}, in which  nodal splits  have  a minimum pre-specified significance in differentiating the  child nodes. Inferring residue predictors at each  index as  functions of the rest of the AA sequence essentially yields an estimated conditional residue distribution  at each index. The set of indices acting as features in each tree varies; for example, as shown in the fragment of the  H1N1 HA \enet (2020-2021) in Fig~\ref{figscheme}b, the predictor for index 63 is dependent on the AA residue at index 155, and the predictor for index 155 is dependent on index 223, the predictor for index 223 is dependent on index 14, and the residue at index 14 is dependent on index 63, revealing a cyclic dependency. The complete \enet harbors a vast number of such  relationships, wherein each internal node of a tree may be recursively ``expanded'' to its own tree. Owing to this recursive expansion,  a complete \enet is hard to visualize; nevertheless it captures the complexity of the rules guiding evolutionary change substantially better than earlier attempts, as evidenced by our validation results.
+Structurally, an \enet comprises an interdependent collection of  local predictors: each aiming to model the observed amino acid ``outcome'' at a specific positional index of the proteins using as features (input variables) the residues appearing  at other  locations  (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a particular index, implying that an \enet comprises atmost as many such  position-specific predictors as the length of the AA sequence. These individual predictors are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive}, in which  nodal splits  have  a minimum pre-specified significance in differentiating the  child nodes. Inferring residue predictors at each  index as  functions of the rest of the AA sequence essentially yields an estimated conditional residue distribution  at each index. The set of indices acting as features in each tree varies; for example, as shown in the fragment of the  H1N1 HA \enet (2020-2021) in Fig~\ref{figscheme}b, the predictor for index 63 is dependent on the AA residue at index 155, and the predictor for index 155 is dependent on index 223, the predictor for index 223 is dependent on index 14, and the residue at index 14 is dependent on index 63, revealing a cyclic dependency. The complete \enet harbors a vast number of such  relationships, wherein each internal node of a tree may be  ``expanded'' to its own tree. Owing to this recursive expansion,  a complete \enet is hard to visualize; nevertheless it captures the complexity of the rules guiding evolutionary change substantially better than earlier attempts, as evidenced by our validation results.
 
-In this study we used  HA and NA protein seqwuences from  all unique \infl strains in the NCBI and GISAID databases between the year 2000 to present time (2022 April,  98,299 strains in total). We  construct \enet{s} separately for H1N1 and H3N2 subtypes, and for each flu season, constructing in total 85 models for predicting seasonal dominance. % # of models: 16 that i computed + 69 precomputed in quasinet package %Dominant strain forecasts are made for each  season and  each hemisphere separately.
-We  use AA sequences with no additional phenotypic annotation, other than identifying the host animal, the subtype, and the time and place of collection. This is advantageous, since antigenic characterization of  \infl strains tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}; however,  incorporation of detailed phenotypic information, $e.g.$ from deep mutational scanning (DMS) assays, has been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic and subtype information, our approach is able to distill deep emergent  fitness-preserving constraints   outperforming reported DMS  augmented strategies for \infl.
+In this study we used  HA and NA protein sequences from  all unique \infl strains in the NCBI and GISAID databases recorded in this millenium (2000-2022,  98,299 strains in total). We  construct \enet{s} separately for H1N1 and H3N2 subtypes, and for each flu season, constructing in total 85 models for predicting seasonal dominance. % # of models: 16 that i computed + 69 precomputed in quasinet package %Dominant strain forecasts are made for each  season and  each hemisphere separately.
+Thus, we make use of  the time and place of collection, and the viral subtype.
+Using no detailed phenotypic charcarerticstics such as deep mutational scanning (DMS) assays is advantageous, since antigenic characterization of  \infl strains tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}; however,  incorporation of DMS data has been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic and subtype information, our approach is able to distill deep emergent  fitness-preserving constraints   outperforming reported DMS  augmented strategies for \infl.
 
  
-Inference of the \enet components is the first step in our approach, which then induces  an intrinsic distance metric between genomic sequences. The \qdist  (Eq.~\eqref{q-distance} in Methods) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the position-specific conditional distributions, averaged over the entire sequence length. Unlike the classical edit distance measuring the number of mutations by which the sequences differ, the \qdist is informed by the   dependencies that the \enet infers, and adapts to the specific subtype, allele frequencies, and variations in the background population. Central to our approach is the theoretical result (Theorem~\ref{SI-thmbnd} in Supplementary text) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$.
-%
-%Thus, the \qdist provides a measure of genomic similarity that is substantially more biologically meaningful compared to the common edit distance.
-
-The mathematical intuition  relating  \qdist  to the loglikelihood of spontaneous change  is similar to the prediction of  a biased outcome when we  toss a fair coin. With an overwhelming probability, a sequence of such tosses should result in roughly equal number of heads and tails. However, large deviations, $i.e$, substantial deviations from the expected fraction,  do happen, and the probability of such rare events is explicitly quantifiable~\cite{varadhan2010large} with elementary results from large deviation theory. Generalizing to non-uniform conditional probabilities inferred by the \enet, we show  that the likelihood of a spontaneous transition  by random chance may also be similarly bounded. As an important distinction from the edit distance, the \qdist  between two fixed sequences may change even if only the background population changes (SI-Table~\ref{SI-tabex}, example where  the distance between two fixed  sequences vary when we vary their collection years, and hence the environment or the background strain distribution). Thus, we can not only estimate the risk of emergence of a particular animal strain, but can track how that risk evolves over time [Figure ref XXX].
+Inference of the \enet components is the first step in our approach, which then induces  an intrinsic distance metric between genomic sequences. The \qdist  (Eq.~\eqref{q-distance} in Methods) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the position-specific conditional distributions, averaged over the entire sequence length. Unlike the classical edit distance measuring the number of mutations by which the sequences differ, the \qdist is informed by the   dependencies that the \enet infers, and adapts to the specific subtype, allele frequencies, and variations in the background population. Central to our approach is the theoretical result (Theorem~\ref{SI-thmbnd} in Supplementary text) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$. The mathematical intuition  relating  \qdist  to the loglikelihood of spontaneous change  is similar to the prediction of  a biased outcome when we  toss a fair coin. While we expect to get roughly equal number of heads and tails with high probability,  large deviations, $i.e$, substantial deviations from the expected fraction,  do happen, and the probability of such rare events is explicitly quantifiable~\cite{varadhan2010large} with elementary results from large deviation theory. Generalizing to non-uniform conditional probabilities inferred by the \enet, the likelihood of a spontaneous transition  by random chance may also be similarly bounded. Unlike the edit distance, the \qdist  between two fixed sequences may change even if only the background population changes (SI-Table~\ref{SI-tabex}, example where  the distance between two fixed  sequences vary when we vary their collection years, and hence the environment or the background strain distribution). Thus, we can not only estimate the risk of emergence of a particular animal strain, but also track its evoltion over time [Figure ref XXX].
 
 %Sequences may have a large \qdist and a small edit distance, and vice versa (although on average the two distances tend to be positively correlated, see SI-Table~\ref{SI-tabcor}).
 
@@ -124,16 +136,16 @@ scales as the average log-likelihood of $Pr(x \rightarrow y)$ where $y$ is any h
 
 To validate our score against CDC-estimated IRAT emergence scores, we construct \enet models for HA and NA segments using all human strains of the same  subtypes collected within the past year of the IRAT assessment date. Since our measure is time-varying, making sure that we estimate the risk at the time of the IRAT assessment is important. For example, the A/swine/Shandong/1207/2016 strain was assessed by IRAT in July 2020, so we  use human H1N1 strains collected  between July 1, 2019 - June 30, 2020. For sub-types with few recorded human strains (H1N2, H5N1, H5N6, H7N7, H9N2), we consider all human strains of the corresponding subtypes collected upto the IRAT evaluation date. We then compute the average \qdist between a given animal  strain  and the circulating human strains for both HA and HA segments (using Eq.~\eqref{eqrho}), with finally reporting the geometric mean of the estimates as the estimated risk. Considering IRAT scores of 22 strains published by the CDC, we find strong support  (correlation of $-0.7032$, pvalue $< 0.005$, Fig.~\ref{figirat}) for this claim. Importantly, each \erisk score  is  computable in approximately $8-12$ seconds as opposed to potentially weeks taken by IRAT experimental assays, and this dramatic reduction in time and cost  opens the door to fully exploiting the  current surveillance capacity.
 
-Importantly,  \erisk is a function of time; the background distribution of strains matters, and
+Importantly, our \erisk is a function of time; the background distribution of strains matters, and
 we show that recomputing the risks for a different time changes (worsens) the correlation with the IRAT estimate. We also show how the risks evolve over time according to our model (See Table~\ref{tabwwXXXX}  and SI-Fig.~\ref{SI-irat})
 
-To map the \enet distances to more recognizable IRAT scores, we  train a linear model to estimate the IRAT emergence score from the \erisk values. Also, since the IRAT impact score is strongly correlated with the emergence score (correlation of $0.8015$), we  trained a linear model to estimate the impact score as well from the  \erisk. We show these results in Table~\ref{tabXXXX}. With our linear models trained, we compute a simulated IRAT analysis of all \infl strains collected over past two years (6,254 sequences in total). (Table~\ref{tabeeeXXXX} shows the top 5 strains of each available subtype). The geolocation of the strains, along with risk information is shown in Fig.~\ref{figXXXXXeee}.
+To map the \enet distances to more recognizable IRAT scores, we  train a linear model to estimate the IRAT emergence score from the \erisk values. Also, since the CDC-estimated IRAT impact score is strongly correlated with their IRAT emergence scores (correlation of $0.8015$), we  trained a linear model to estimate the impact score as well from the  \erisk. We show these results in Table~\ref{tabXXXX}. With our linear models trained, we compute a simulated IRAT analysis of all \infl strains collected over past two years (6,254 sequences in total). (Table~\ref{tabeeeXXXX} shows the top 5 strains of each available subtype). The geolocation of the strains, along with risk information is shown in Fig.~\ref{figXXXXXeee}.
 
 
 \DQS{discuss world prediction results}
 
 In conclusion, while numerous tools exist for ad hoc quantification of genomic similarity~\cite{posada1998modeltest,goldberger2005genomic,huelsenbeck1997phylogeny,neher2014predicting,VanderMeer2010,Smith2009}, a smaller  distance $i.e.$ a higher similarity of two strains in  these frameworks is not sufficient to imply a high likelihood of a jump. % These measures tend to be  variations of the edit distance between  sequences, and their connection to selection pressures is at best qualitative, with the  missing piece being effectively learning which changes are likely in the wild, conditioned on possibly the entire sequence of the current strain.
-To the best of our knowledge, the \enet algorithm is  the first of its kind to learn an appropriate comparison metric from data, without assuming any model of DNA or amino acid substitution, or a genealogical tree a priori. While the effect of the environment and selection cannot be inferred from a single sequence, an entire database of observed strains, processed through the right lens, can parse out useful predictive models of these complex interactions. Our results are  aligned with recent studies demonstrating effective  predictability of  future mutations  for different organisms~\cite{mollentze2021identifying,maher2021predicting}.
+To the best of our knowledge, the \enet algorithm is  the first of its kind to learn an appropriate biologically meaningful comparison metric from data, without assuming any model of DNA or amino acid substitution, or a genealogical tree a priori. While the effect of the environment and selection cannot be inferred from a single sequence, an entire database of observed strains, processed through the right lens, can parse out useful predictive models of these complex interactions. Our results are  aligned with recent studies demonstrating effective  predictability of  future mutations  for different organisms~\cite{mollentze2021identifying,maher2021predicting}.
    
 The \qdist calculation   is currently limited to analogous sequences (such as point variations of the same protein from different viral subtypes), and the \enet inference requires a  sufficient diversity of observed strains. A multi-variate regression analysis indicates  that the most important factor for our approach to succeed is  the diversity of the sequence dataset (see Supplementary Text, SI Table~\ref{SI-tabreg}), which would exclude applicability to completely novel pathogens with no related human variants, and ones that evolve very slowly. Nevertheless, the tools reported here can improve effectiveness of the annual flu shot, and perhaps allow for the development of premeptive vaccines to  target risky animal strains  before the first human infection in the next pandemic.
 
